--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "1.0.0",
   "main": "db.js",
   "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,8 +13,11 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.2",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "mongoose": "^9.1.3",
+    "mongoose": "^9.1.3"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.11"
   }
 }
